@@ -2649,17 +2649,10 @@ sub handle_dist
 		       'DISTCHECK-HOOK' => &target_defined ('distcheck-hook'),
 		       'GETTEXT'        => $seen_gettext);
 
-    if (scalar keys %dist_dirs)
-    {
-	# Prepend $(distdir) to each directory given.
-	my %rewritten;
-	grep ($rewritten{'$(distdir)/' . $_} = 1, keys %dist_dirs);
-	$xform .= &transform ('DISTDIRS', join (' ', sort keys %rewritten));
-    }
-    else
-    {
-        $xform .= 's/.*\@DISTDIRS\@.*//g;';
-    }
+    # Prepend $(distdir) to each directory given.
+    my %rewritten;
+    grep ($rewritten{'$(distdir)/' . $_} = 1, keys %dist_dirs);
+    $xform .= &transform ('DISTDIRS', join (' ', sort keys %rewritten));
 
     # If we have SUBDIRS, create all dist subdirectories and do
     # recursive build.
