@@ -43,7 +43,7 @@ distdir: $(DISTFILES)
 ?TOPDIR?	mkdir $(distdir)
 ##
 ##
-	$(mkinstalldirs) @DISTDIRS@
+?DISTDIRS?	$(mkinstalldirs) @DISTDIRS@
 ##
 ##
 	@for file in $(DISTFILES); do \
