@@ -1,5 +1,13 @@
 2001-02-26  Akim Demaille  <akim@epita.fr>
 
+	* automake.in (&handle_dist): Use &transform instead of dedicated
+	magic for DISTDIRS.
+	But be sure to always do it.
+	* distdir.am: Adjust.
+
+	
+2001-02-26  Akim Demaille  <akim@epita.fr>
+
 	* automake.in: Use File::Basename.
 	(&dirname, &basename): Remove.
 
